Full task without tests